policydemov3/default-deny-v1.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: security.default-deny-v1
spec:
  tier: security
  selector: projectcalico.org/namespace not in  {'kube-system', 'calico-system', 'calico-apiserver', 'argocd'}
  types:
    - Ingress
    - Egress
